# qml_text_editor

./: CMakeLists.txt  Main.qml  README.md  about.cpp  about.h  backend.cpp  backend.h  frontend_functionality.js  main.cpp
